crates/marion-supervisor/tests/snapshots/l45_tree__l45_tree_blurred.snap
---
source: crates/marion-supervisor/tests/l45_tree.rs
assertion_line: 268
expression: "report(&tree, false)"
---
--- 96x12, tree blurred ---
 marion · 5 nodes, 4 running, 1 needs attention · /work/marion
● running impl root-claude
├ ● idle impl pane-claude
└ ◐ blocked:permission impl opencode-1832
  └ ● spawning impl codex-unversioned
✓ exited:ok impl orphan-copilot





caps: steer  interrupt  fork  resume  view  permissions  elicitation  set_model  token_deltas …
--- tree column, one line per row, styled ---
Style::new().green().bg(Color::Reset).bold()  "● running impl root-claude"
Style::new().fg(Color::Reset).bg(Color::Reset)  "├ ● idle impl pane-claude"
Style::new().fg(Color::Reset).bg(Color::Reset)  "└ ◐ blocked:permission impl opencode-1832"
Style::new().fg(Color::Reset).bg(Color::Reset)  "  └ ● spawning impl codex-unversioned"
Style::new().fg(Color::Reset).bg(Color::Reset)  "✓ exited:ok impl orphan-copilot"
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
--- action strip, one line per style run ---
Style::new().fg(Color::Reset).bg(Color::Reset)  "caps:"
Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  " steer "
Style::new().fg(Color::Reset).bg(Color::Reset).bold()  " interrupt "
Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  " fork  resume  view "
Style::new().fg(Color::Reset).bg(Color::Reset).bold()  " permissions "
Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  " elicitation  set_model  token_deltas "
Style::new().fg(Color::Reset).bg(Color::Reset)  "… "
