crates/marion-supervisor/tests/snapshots/l45_tree__l45_tree_pane_node_greys_what_its_surfaces_cannot_carry.snap
---
source: crates/marion-supervisor/tests/l45_tree.rs
assertion_line: 244
expression: "report(&tree, true)"
---
--- 96x12, tree focused ---
 marion · 5 nodes, 4 running, 1 needs attention · /work/marion
● running impl root-claude
├ ● idle impl pane-claude
└ ◐ blocked:permission impl codex-146
  └ ● spawning impl codex-unversioned
✓ exited:ok impl orphan-gemini





caps: steer  interrupt  fork  resume  view  permissions  elicitation  set_model  token_deltas …
--- tree column, one line per row, styled ---
Style::new().green().bg(Color::Reset)  "● running impl root-claude"
Style::new().fg(Color::Reset).bg(Color::Reset).reversed()  "├ ● idle impl pane-claude"
Style::new().fg(Color::Reset).bg(Color::Reset)  "└ ◐ blocked:permission impl codex-146"
Style::new().fg(Color::Reset).bg(Color::Reset)  "  └ ● spawning impl codex-unversioned"
Style::new().fg(Color::Reset).bg(Color::Reset)  "✓ exited:ok impl orphan-gemini"
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
Style::new().fg(Color::Reset).bg(Color::Reset)  ""
--- action strip, one line per style run ---
Style::new().fg(Color::Reset).bg(Color::Reset)  "caps:"
Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  " steer "
Style::new().fg(Color::Reset).bg(Color::Reset).bold()  " interrupt "
Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  " fork  resume  view  permissions  elicitation  set_model  token_deltas "
Style::new().fg(Color::Reset).bg(Color::Reset)  "… "
